<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <Button
        android:id="@+id/btn_contacts"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_margin="10dp"
        android:onClick="contacts"
        android:text="@string/contacts"
        android:textSize="18sp"
        app:layout_constraintBottom_toTopOf="@id/btn_maps"
        app:layout_constraintEnd_toStartOf="@id/btn_sms"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/btn_sms"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_margin="10dp"
        android:onClick="sms"
        android:text="@string/sms"
        android:textSize="18sp"
        app:layout_constraintBottom_toTopOf="@+id/btn_my_activity"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@id/btn_contacts"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/btn_maps"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_margin="10dp"
        android:onClick="maps"
        android:text="@string/maps"
        android:textSize="18sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/btn_my_activity"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/btn_contacts" />

    <Button
        android:id="@+id/btn_my_activity"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_margin="10dp"
        android:onClick="my_activity"
        android:text="@string/my_activity"
        android:textSize="18sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@id/btn_maps"
        app:layout_constraintTop_toBottomOf="@id/btn_sms" />
</androidx.constraintlayout.widget.ConstraintLayout>